--- a/src/Modules/MasterModule/Views/Clients/DriverLicenseView.xaml
+++ b/src/Modules/MasterModule/Views/Clients/DriverLicenseView.xaml
@@ -6,7 +6,8 @@
              xmlns:KarveControls="clr-namespace:KarveControls;assembly=KarveControls"
              mc:Ignorable="d" 
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
-             xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" 
+             xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+             xmlns:mvvm1="http://www.codeplex.com/prism"
              d:DesignHeight="900" d:DesignWidth="800">
     <Grid>
         <GroupBox Header="Conductores">
@@ -34,12 +35,20 @@
                                     TextContentSecondWidth="150"
                                     SourceView="{Binding DriversDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
 
-                <CheckBox Content="Sin Permiso de conducir"
+                <KarveControls:DataFieldCheckBox Content="Sin Permiso de conducir"
                                                          Margin="10,0,0,0"
                                                           Height="30" 
-                                                         Grid.Row="1"  
-                                                         KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay}"
-                                                         KarveControls:ControlExt.DataSourcePath="SINPERMISODECONDUCIR" VerticalAlignment="Bottom"/>
+                                                         Grid.Row="1"
+                                                        DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                         KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                                                         KarveControls:ControlExt.DataSourcePath="SINPERMISODECONDUCIR" VerticalAlignment="Bottom">
+
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="DataFieldCheckBoxChanged">
+                            <mvvm1:InvokeCommandAction Command="{Binding ItemChangedCommand, PresentationTraceSources.TraceLevel=High}" TriggerParameterPath="ChangedValuesObjects"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </KarveControls:DataFieldCheckBox>
 
 
                 <StackPanel x:Name="DrivingLicenseLayout" Grid.Row="2">
@@ -90,6 +99,7 @@
                             <KarveControls:DataDatePicker Grid.Column="0" Grid.Row="0" LabelText="Fecha Exp. NIF" 
                                                               Height="35" MinWidth="100"
                                                           LabelTextWidth="100"
+                                                           KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                                                               KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                                               KarveControls:ControlExt.DataSourcePath="FEDNI" Margin="10,8,4,8" Width="Auto" />
                             <KarveControls:DataField Grid.Column="1" Grid.Row="0"  DataSourcePath="LUDNI" 
@@ -106,6 +116,8 @@
                                                           LabelText="{Binding BirthDate, Source={StaticResource ResourceLanguage}}"
                                                   LabelTextWidth="150"
                                                               Height="35" 
+                                                                                                                     KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+
                                                               KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                                               KarveControls:ControlExt.DataSourcePath="FENAC" Margin="10,47,1,3" Width="Auto" Grid.RowSpan="2" />
 
@@ -124,7 +136,7 @@
                             <KarveControls:DataDatePicker Grid.Column="0" Grid.Row="1" LabelText="Fecha Exp. Permiso" 
                                                               Height="35" MinWidth="250"
                                                             LabelTextWidth="150"
-                                                    
+                                                          KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"                                                    
                                                           KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                                               KarveControls:ControlExt.DataSourcePath="FEEXPE" Margin="10,5,0,9" Width="Auto" />
                             <KarveControls:DataField Grid.Column="1" Grid.Row="2"  
@@ -143,7 +155,8 @@
                                 DockPanel.Dock ="Left" LabelText="Fecha Cad. Permiso"
                                 LabelTextWidth="150"
                                                               Height="35" MinWidth="250"
-                                                              KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"                              
+                                KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                                               KarveControls:ControlExt.DataSourcePath="FECAU" Margin="10,11,14,13" Width="Auto" />
                             <KarveControls:DataField  Grid.Column="1" Grid.Row="3"  
                                                      DataSourcePath="NRC" 
